--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./index.js"
+    "dev": "nodemon ./index.js",
+    "task1": "nodemon ./03-eventEmmiter-buffer-stream/task1.js",
+    "task2": "nodemon ./03-eventEmmiter-buffer-stream/task2.js",
+    "task3": "nodemon ./03-eventEmmiter-buffer-stream/task3.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +21,8 @@
   "homepage": "https://github.com/MykhailoSheliahov/nodejs-Q2Q3-2023#readme",
   "devDependencies": {
     "nodemon": "^2.0.22"
+  },
+  "dependencies": {
+    "csvtojson": "^2.0.10"
   }
 }
