--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "nodejs-q2q3-2023",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "dev": "nodemon ./index.js",
+    "dev": "nodemon ./index.ts",
     "task1": "nodemon ./03-eventEmmiter-buffer-stream/task1.js",
     "task2": "nodemon ./03-eventEmmiter-buffer-stream/task2.js",
-    "task3": "nodemon ./03-eventEmmiter-buffer-stream/task3.js"
+    "task3": "nodemon ./03-eventEmmiter-buffer-stream/task3.js",
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -20,9 +22,16 @@
   },
   "homepage": "https://github.com/MykhailoSheliahov/nodejs-Q2Q3-2023#readme",
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "@types/jest": "^29.0.0",
+    "@types/node": "^18.7.16",
+    "jest": "^29.0.3",
+    "nodemon": "^2.0.22",
+    "ts-jest": "^29.0.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.3"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "csvtojson": "^2.0.10"
   }
 }
