--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   },
   "homepage": "https://github.com/MykhailoSheliahov/nodejs-Q2Q3-2023#readme",
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.0.0",
     "@types/node": "^18.7.16",
+    "express": "^4.18.2",
     "jest": "^29.0.3",
     "nodemon": "^2.0.22",
     "ts-jest": "^29.0.0",
