--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
+    "start": "node ./06-express/server/app.ts",
     "dev": "nodemon ./index.ts",
     "task1": "nodemon ./03-eventEmmiter-buffer-stream/task1.js",
     "task2": "nodemon ./03-eventEmmiter-buffer-stream/task2.js",
@@ -27,6 +28,7 @@
     "@types/node": "^18.7.16",
     "express": "^4.18.2",
     "jest": "^29.0.3",
+    "mongodb": "^5.6.0",
     "nodemon": "^2.0.22",
     "ts-jest": "^29.0.0",
     "ts-node": "^10.9.1",
