--- a/package.json
+++ b/package.json
@@ -26,16 +26,33 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.0.0",
     "@types/node": "^18.7.16",
+    "@types/uuid": "^9.0.2",
     "express": "^4.18.2",
     "jest": "^29.0.3",
     "mongodb": "^5.6.0",
     "nodemon": "^2.0.22",
     "ts-jest": "^29.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.3",
+    "uuid": "^9.0.0"
   },
   "dependencies": {
+    "@mikro-orm/cli": "^5.7.12",
+    "@mikro-orm/core": "^5.7.12",
+    "@mikro-orm/migrations": "^5.7.12",
+    "@mikro-orm/postgresql": "^5.7.12",
+    "@mikro-orm/seeder": "^5.7.12",
+    "@types/pg": "^8.10.2",
     "axios": "^0.27.2",
-    "csvtojson": "^2.0.10"
+    "csvtojson": "^2.0.10",
+    "dotenv": "^16.1.4",
+    "pg": "^8.11.0"
+  },
+  "mikro-orm": {
+    "useTsNode": true,
+    "configPaths": [
+      "./server/config/orm.config.ts",
+      "./dist/config/orm.config.js"
+    ]
   }
 }
