--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/jest": "^29.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.7.16",
     "@types/uuid": "^9.0.2",
     "express": "^4.18.2",
     "jest": "^29.0.3",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.6.0",
     "nodemon": "^2.0.22",
     "ts-jest": "^29.0.0",
