--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "node ./06-express/server/app.ts",
+    "server": "set DEBUG=app,verifyToken,routes:login,routes:register & ts-node ./06-express/server/app.ts",
+    "client": "node ./06-express/server/index.js",
     "dev": "nodemon ./index.ts",
     "task1": "nodemon ./03-eventEmmiter-buffer-stream/task1.js",
     "task2": "nodemon ./03-eventEmmiter-buffer-stream/task2.js",
@@ -44,9 +45,11 @@
     "@mikro-orm/migrations": "^5.7.12",
     "@mikro-orm/postgresql": "^5.7.12",
     "@mikro-orm/seeder": "^5.7.12",
+    "@types/debug": "^4.1.8",
     "@types/pg": "^8.10.2",
     "axios": "^0.27.2",
     "csvtojson": "^2.0.10",
+    "debug": "^4.3.4",
     "dotenv": "^16.1.4",
     "pg": "^8.11.0"
   },
