--- a/package.json
+++ b/package.json
@@ -45,9 +45,11 @@
     "@mikro-orm/migrations": "^5.7.12",
     "@mikro-orm/postgresql": "^5.7.12",
     "@mikro-orm/seeder": "^5.7.12",
+    "@types/bunyan": "^1.8.8",
     "@types/debug": "^4.1.8",
     "@types/pg": "^8.10.2",
     "axios": "^0.27.2",
+    "bunyan": "^1.8.15",
     "csvtojson": "^2.0.10",
     "debug": "^4.3.4",
     "dotenv": "^16.1.4",
