--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "task2": "nodemon ./03-eventEmmiter-buffer-stream/task2.js",
     "task3": "nodemon ./03-eventEmmiter-buffer-stream/task3.js",
     "test": "jest",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "prepare": "husky install",
+    "precommit": "sh ./.husky/commit-msg.sh"
   },
   "repository": {
     "type": "git",
@@ -24,14 +26,19 @@
   },
   "homepage": "https://github.com/MykhailoSheliahov/nodejs-Q2Q3-2023#readme",
   "devDependencies": {
+    "@commitlint/cli": "^17.6.6",
+    "@commitlint/config-conventional": "^17.6.6",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.0.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.7.16",
     "@types/uuid": "^9.0.2",
     "express": "^4.18.2",
+    "husky": "^8.0.3",
     "jest": "^29.0.3",
     "jsonwebtoken": "^9.0.0",
+    "lint-staged": "^13.2.3",
+    
     "mongodb": "^5.6.0",
     "nodemon": "^2.0.22",
     "ts-jest": "^29.0.0",
