--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test": "jest",
     "test:coverage": "jest --coverage",
     "prepare": "husky install",
-    "precommit": "sh ./.husky/commit-msg.sh"
+    "precommit": "sh ./.husky/commit-msg.sh",
+    "lint": "eslint --fix . --ext .ts"
   },
   "repository": {
     "type": "git",
@@ -33,12 +34,17 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.7.16",
     "@types/uuid": "^9.0.2",
+    "eslint": "^8.43.0",
+    "eslint-config-semistandard": "^17.0.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
     "express": "^4.18.2",
     "husky": "^8.0.3",
     "jest": "^29.0.3",
     "jsonwebtoken": "^9.0.0",
     "lint-staged": "^13.2.3",
-    
     "mongodb": "^5.6.0",
     "nodemon": "^2.0.22",
     "ts-jest": "^29.0.0",
@@ -55,12 +61,15 @@
     "@types/bunyan": "^1.8.8",
     "@types/debug": "^4.1.8",
     "@types/pg": "^8.10.2",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
     "axios": "^0.27.2",
     "bunyan": "^1.8.15",
     "csvtojson": "^2.0.10",
     "debug": "^4.3.4",
     "dotenv": "^16.1.4",
-    "pg": "^8.11.0"
+    "pg": "^8.11.0",
+    "prettier": "^2.8.8"
   },
   "mikro-orm": {
     "useTsNode": true,
