feat: update docker compose

--- a/06-express/tsconfig.json
+++ b/06-express/tsconfig.json
@@ -16,5 +16,5 @@
   },
   "discovery": { "disableDynamicFileAccess": false },
   "include": ["./server"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules",]
 }
