--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,16 @@
 version: '3'
 services:
+  app:
+    container_name: my_app
+    build:
+      context: .
+      dockerfile: Dockerfile
+    restart: always
+    ports:
+      - '3000:3000'
   postgres-db:
     image: 'postgres:12'
-    container_name: 'node-gmp-db'
+    container_name: 'postgres'
     environment:
       - POSTGRES_USER=node_gmp
       - POSTGRES_PASSWORD=password123
