--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "node ./06-express/server/app.ts",
+    "server": "set DEBUG=app,verifyToken,routes:login,routes:register && ts-node ./06-express/server/app.ts",
+    "client": "ts-node ./06-express/server/index.ts",
     "dev": "nodemon ./index.ts",
     "task1": "nodemon ./03-eventEmmiter-buffer-stream/task1.js",
     "task2": "nodemon ./03-eventEmmiter-buffer-stream/task2.js",
     "task3": "nodemon ./03-eventEmmiter-buffer-stream/task3.js",
     "test": "jest",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "prepare": "husky install",
+    "precommit": "sh ./.husky/commit-msg.sh",
+    "lint": "eslint --fix . --ext .ts",
+    "audit": "npm audit",
+    "seed": "cd ./06-express && npx mikro-orm migration:create --initial && npx mikro-orm migration:up &&  npx mikro-orm seeder:run"
   },
   "repository": {
     "type": "git",
@@ -23,14 +29,24 @@
   },
   "homepage": "https://github.com/MykhailoSheliahov/nodejs-Q2Q3-2023#readme",
   "devDependencies": {
+    "@commitlint/cli": "^17.6.6",
+    "@commitlint/config-conventional": "^17.6.6",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.0.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.7.16",
     "@types/uuid": "^9.0.2",
+    "eslint": "^8.43.0",
+    "eslint-config-semistandard": "^17.0.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
     "express": "^4.18.2",
+    "husky": "^8.0.3",
     "jest": "^29.0.3",
     "jsonwebtoken": "^9.0.0",
+    "lint-staged": "^13.2.3",
     "mongodb": "^5.6.0",
     "nodemon": "^2.0.22",
     "ts-jest": "^29.0.0",
@@ -44,11 +60,18 @@
     "@mikro-orm/migrations": "^5.7.12",
     "@mikro-orm/postgresql": "^5.7.12",
     "@mikro-orm/seeder": "^5.7.12",
+    "@types/bunyan": "^1.8.8",
+    "@types/debug": "^4.1.8",
     "@types/pg": "^8.10.2",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
     "axios": "^0.27.2",
+    "bunyan": "^1.8.15",
     "csvtojson": "^2.0.10",
+    "debug": "^4.3.4",
     "dotenv": "^16.1.4",
-    "pg": "^8.11.0"
+    "pg": "^8.11.0",
+    "prettier": "^2.8.8"
   },
   "mikro-orm": {
     "useTsNode": true,
